data-script-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-script
  name: data-script
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-script
  template:
    metadata:
      labels:
        app: data-script
    spec:
      containers:
      - image: amanasangulov/quotes-data-script:v5
        name: data-script
