back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: amanasangulov/quotes-back:v5
        name: api
        ports:
        - containerPort: 3000
          name: http
      restartPolicy: Always


---


apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 3000
    targetPort: 3000
