front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: nursultanken/quotes-front:v2
        name: front
        ports:
        - containerPort: 3001
      restartPolicy: Always


---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
  selector:
    app: front
